2005-02-14  Nathaniel Smith  <njs@codesourcery.com>

	* std_hooks.lua: Remove tabs.

2005-02-14  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_automate_heads.at: New test.
	* tests/t_automate_version.at: New test.
	* testsuite.at: Add then.
	
	* commands.cc (automate): Fix documentation string.
	* automate.cc: Much more structured documentation comments.

2005-02-13  Nathaniel Smith  <njs@codesourcery.com>

	* automate.{cc,hh}: New files.
	* commands.cc: New command "automate".

2005-02-08  Nathaniel Smith  <njs@codesourcery.com>

	* change_set.cc (check_sane): Null sources are only valid for
	adds.

2005-02-07  Nathaniel Smith  <njs@codesourcery.com>

	* database.cc (struct version_cache): Fix invariant in cache
	clearing logic.

2005-02-06  Nathaniel Smith  <njs@codesourcery.com>

	* change_set.cc: Add a few more invariants; add lots and lots of
	unit tests.

2005-02-06  graydon hoare  <graydon@pobox.com>

	* change_set.cc: Use hash_map in a few places.
	(confirm_unique_entries_in_directories): Fix invariants.
	* constants.{cc,hh} (db_version_cache_sz): New constant.
	* database.cc (version_cache): New structure.
	(get_version): Use it.
	* interner.hh: Rewrite to use hash_map and vector.
	* tests/t_no_rename_overwrite.at: Tweak return codes.

2005-02-06  Nathaniel Smith  <njs@codesourcery.com>

	* ui.hh (ensure_clean_line): New method.
	* ui.cc (inform): Use it.
	* keys.cc (get_passphrase): Call it before prompting for passphrase.

2005-02-06  Nathaniel Smith  <njs@codesourcery.com>

	* database.cc (info): Report more statistics.

	* ROADMAP: Remove finished items.

	* revision.cc (analyze_manifest_changes): Childs cannot be null,
	that makes no sense.
	(add_node_for_old_manifest): Log node names, don't print it.
	(construct_revision_from_ancestry): Partially rewrite to handle
	root nodes explicitly.
	(build_changesets_from_existing_revs): Don't put the null revision
	in the ancestry graph, to match changesetify logic.